--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,7 +13,7 @@
     "typeRoots": ["node_modules/@types", "src/types"],
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
-    "skipLibCheck": false,
+    "skipLibCheck": true,
     "resolveJsonModule": true
   },
   "exclude": [
